--- a/webapps/wordcloud/body.html
+++ b/webapps/wordcloud/body.html
@@ -5,5 +5,5 @@
 <h1></h1>
 <div style="text-align: center">
     <div class="chart" id="wordcloud"></div>
-    <div class="chart" id="wordcloud"></div>
+    <div class="chart" id="wordcloud2"></div>
 </div> 
