Edited file 'webapps/wordcloud/body.html'

--- a/webapps/wordcloud/body.html
+++ b/webapps/wordcloud/body.html
@@ -4,6 +4,5 @@
 
 <h1></h1>
 <div style="text-align: center">
-    <div class="chart" id="wordcloud"></div>
-    <div class="sep"></div>
+    <div id="wordcloud"></div>
 </div> 
