updated frontend for subcharts

--- a/webapps/wordcloud/body.html
+++ b/webapps/wordcloud/body.html
@@ -1,8 +1,13 @@
-<script src="/plugins/nlp-visualization/resource/dku-helpers.js"></script>
-<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-<script type="text/javascript"></script>
+<head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="/static/public/styles/1.0.0/dku-styles.css" />
+    <script src="/plugins/nlp-visualization/resource/dku-helpers.js"></script>
+    <script type="text/javascript"></script>
+</head>
 
-<h1></h1>
-<div style="text-align: center">
-    <div id="wordcloud"></div>
-</div> 
+<body>
+    <div class="container" id="wordcloud">
+    </div>
+</body>
+
