--- a/webapps/wordcloud/body.html
+++ b/webapps/wordcloud/body.html
@@ -1,13 +1,15 @@
 <head>
     <link href="/plugins/nlp-visualization/resource/bootstrap.min.css" rel="stylesheet">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/static/public/styles/1.0.0/dku-styles.css" />
     <script src="/plugins/nlp-visualization/resource/dku-helpers.js"></script>
     <script type="text/javascript"></script>
 </head>
 
 <body>
+    <div id="spinner"></div>
     <div class="container" id="wordcloud">
     </div>
 </body>
-
