--- a/webapps/wordcloud/body.html
+++ b/webapps/wordcloud/body.html
@@ -6,10 +6,17 @@
     <link rel="stylesheet" href="/static/public/styles/1.0.0/dku-styles.css" />
     <script src="/plugins/nlp-visualization/resource/dku-helpers.js"></script>
     <script type="text/javascript"></script>
+
 </head>
 
 <body>
     <div id="spinner"></div>
     <div class="container" id="wordcloud">
+    </div>
+    <div class="progress" style="width: 50%; margin: 50px;">
+        <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="0" aria-valuemin="0"
+            aria-valuemax="100" style="width: 0%">
+            <span class="progress-bar-label">0%</span>
+        </div>
     </div>
 </body>
